src/styles/styles.scss
@import "./variables-color.scss";
@import "./media-screen-variables";
@import "./sass-variables";
@import "./_variables";

@import "~@angular/material/theming";

/* Importing bootstrap */
@import "~bootstrap/scss/bootstrap";

/* Importing swiper */
@import "~swiper/css/bundle";

/* Importing animate */
@import "~animate.css/animate.min.css";

@include mat-core();

$app-primary: mat-palette($mat-teal);
$app-accent: mat-palette($mat-pink, A200, A100, A400);

$app-warn: mat-palette($mat-red);

$app-theme: mat-light-theme(
  (
    color: (
      primary: $app-primary,
      accent: $app-accent,
      warn: $app-warn,
    ),
  )
);

@include angular-material-theme($app-theme);

$app-dark-theme: mat-dark-theme(
  (
    color: (
      primary: $app-primary,
      accent: $app-accent,
      warn: $app-warn,
    ),
  )
);

.darkMode {
  @include angular-material-theme($app-dark-theme);
}
html,
body {
  height: auto;
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  scroll-behavior: smooth;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}
*:focus {
  outline: none;
}

//custom scrollbar
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  background: var(--negative-grey);
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;

  background: var(--strong-grey);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--red-mixed);
}

//content to master-detail
.mat-drawer-content {
  overflow: hidden !important;
  min-height: 100vh;
}

//style to hr with class hr-horizontal
.hr-horizontal {
  text-align: center;
  height: var(--horizontal-row-height);
  color: var(--strong-grey);
  border-top: solid var(--strong-grey);
  border-radius: var(--horizontal-row-borderRadius);
  margin-left: 25px !important;
  margin-right: 25px !important;
}

//mat-sidenav-container master detail
mat-sidenav-container {
  position: relative;
  height: auto !important;
}
mat-card {
  box-shadow: var(--shadow-card-description-lightMode) !important;
}
.darkMode mat-card {
  box-shadow: var(--shadow-card-description-darkMode) !important;
}

//button generico
button {
  position: relative;
  padding: 1em 1.5em;
  border: none;
  background-color: transparent;
  cursor: pointer;
  outline: none;
  font-size: $fontMedium;
  margin: 1em 0.8em;

  &.withSpecialHover {
    color: var(--black);
  }
  &.withSpecialHover:not([disabled])::after,
  &.withSpecialHover:not([disabled])::before {
    content: "";
    display: block;
    position: absolute;
    width: 20%;
    height: 20%;
    border: 2px solid;
    transition: all 0.6s ease;
    border-radius: 2px;
  }

  &.withSpecialHover:not([disabled])::after {
    bottom: 0;
    right: 0;
    border-top-color: transparent;
    border-left-color: transparent;
    border-bottom-color: var(--orange);
    border-right-color: var(--orange);
  }

  &.withSpecialHover:not([disabled])::before {
    top: 0;
    left: 0;
    border-bottom-color: transparent;
    border-right-color: transparent;
    border-top-color: var(--orange);
    border-left-color: var(--orange);
  }

  &.withSpecialHover:hover:not([disabled]):after,
  &.withSpecialHover:hover:not([disabled]):before {
    border-bottom-color: var(--orange);
    border-right-color: var(--orange);
    border-top-color: var(--orange);
    border-left-color: var(--orange);
    width: 100%;
    height: 100%;
  }
  &.withSpecialHover.active {
    border: 2px solid var(--orange);
    animation: pulse 1s;
    box-shadow: 0 0 0 2em rgba(#fff, 0);

    &::after,
    &::before {
      display: none;
    }
  }
  &:disabled {
    background: var(--grey);
    cursor: unset;
    color: var(--darrk-grey);
  }
}
.darkMode button {
  &.withSpecialHover {
    color: var(--white);
  }
}

@keyframes pulse {
  0% {
    box-shadow: 0 0 0 0 var(--red);
  }
}

@media (max-width: $mobile-big) {
  button {
    font-size: $fontExtraSmall;
    padding: 1em 1em;
  }
}

//navbar mobile
.mat-sidenav-container .mat-sidenav {
  width: 70%;
}
.mobile .mat-list-item-content {
  margin: 20px;
}
.mobile p {
  width: fit-content;
  padding: 10px;
  height: 50px;
}

//navbar desktop
app-navbar {
  flex: 1 1 auto;
}

//with theme dark
.darkMode .mat-toolbar {
  background: #212121a6;
  color: var(--white);
  & .theme {
    & .mat-icon {
      color: var(--red);
      border-radius: 60px;
      background: #e7ae81;
      box-shadow: var(--shadow-icon-change-theme-dark);
      -moz-box-shadow: var(--shadow-icon-change-theme-dark);
      -webkit-box-shadow: var(--shadow-icon-change-theme-dark);
    }
  }
}

//card dark theme
.darkMode .simple-card mat-card {
  box-shadow: var(--shadow-card-description-darkMode) !important;
}

// price-card animation border on active tab
.tab-price-card .mat-tab-label {
  border-left: 0;
  border-right: 0;
}

.tab-price-card .mat-tab-label-active {
  border-left: 2px solid;
  border-right: 2px solid;
  opacity: 1 !important;
  animation: animate 0.5s linear;

  & .mat-tab-label-content {
    color: var(--red);
  }
}

@keyframes animate {
  0% {
    transform: scaleY(0);
    transform-origin: bottom;
  }
  100% {
    transform: scaleY(1);
    transform-origin: top;
  }
}

//size and color tab label
.darkMode .tab-price-card .mat-tab-label-active {
  opacity: 1;
  & .mat-tab-label-content {
    color: var(--red);
  }
}
.tab-price-card .mat-tab-label-content {
  font-size: $fontMedium;
  color: var(--black);
}
.darkMode .tab-price-card .mat-tab-label-content {
  color: var(--white);
}
.tab-price-card .mat-tab-group.mat-primary .mat-ink-bar,
.tab-price-card .mat-tab-nav-bar.mat-primary .mat-ink-bar {
  background-color: var(--black) !important;
  position: absolute;
  top: 0;
}
.darkMode .tab-price-card .mat-tab-group.mat-primary .mat-ink-bar,
.darkMode .tab-price-card .mat-tab-nav-bar.mat-primary .mat-ink-bar {
  background-color: var(--white) !important;
}

//body mat-tab
.mat-tab-body {
  padding: 50px;
  margin: 0;
}

@media (max-width: $mobile-small) {
  .mat-tab-label-content {
    font-size: $fontExtraSmall;
  }
  .mat-tab-body {
    padding: 0px;
  }
}

//darkMode for gallery image
.darkMode .portfolio-item .item {
  & .container {
    box-shadow: var(--text-shadow-darkMode) !important;
  }
}

//darkMode input on gallery manager
.darkMode #input-search {
  box-shadow: var(--text-shadow-darkMode) !important;
  & .swing {
    color: var(--black);
    background: var(--white);

    &::-webkit-input-placeholder {
      color: var(--white);
    }
  }
  & .swing:focus,
  & .swing:active {
    color: var(--black);
    text-indent: 0;
    background: var(--grey);

    &::-webkit-input-placeholder {
      color: var(--strong-grey);
    }
  }
}
.darkMode .swing:focus ~ .search-images,
.darkMode .swing:active ~ .search-images {
  box-shadow: var(--box-shadow-very-clear-darkMode) !important;
}

//contacts page
#contacts-tab-group {
  position: relative;
  top: 50px;
  margin-top: 50px;
  margin-bottom: 10%;
  padding: 3%;
  & .mat-tab-body-wrapper {
    display: none;
  }

  & .mat-tab-nav-bar,
  & .mat-tab-header {
    border-bottom: none;
  }

  & .mat-ripple {
    width: 200px !important;
    height: 200px !important;
    border-radius: 50%;
    margin: 1% 3%;
  }
  & .mat-tab-label {
    color: transparent !important;
    transition: 1s ease-out;
    transform: scale(0.8);
    opacity: 0.4;
    &.mat-tab-label-active {
      transform: scale(1);
      opacity: 1;
    }
  }
  & mat-ink-bar.mat-ink-bar {
    visibility: hidden !important;
  }
}

//card for contact
.darkMode .card-contact {
  box-shadow: var(--shadow-card-description-darkMode) !important;

  &:before {
    border-color: var(--background) transparent !important;
  }
}
@media (max-width: $mobile-big) {
  #contacts-tab-group .mat-ripple {
    width: 110px !important;
    height: 110px !important;
    &.mat-tab-header-pagination {
      display: none;
    }
  }
}

//feedback
.mat-form-field-infix {
  width: auto !important;
}
.darkMode .formFeedback {
  box-shadow: var(--text-shadow-darkMode) !important;
}

.darkMode .container.comment {
  box-shadow: var(--text-shadow-darkMode) !important;
}
//modal confirm
.mat-dialog-container {
  overflow: visible !important;
}

